<resources>
    <string name="app_name">XYZ DRUBER</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="search">Search</string>
    <string name="run">Run</string>
    <string name="txt_video_feed_selection">Change Video Source: </string>
    <string name="txt_video_dynamic_size">Test FPV widget view in different size: </string>
    <string name="set_auto_video_feed">Auto</string>
    <string name="set_primary_video_feed">Primary</string>
    <string name="set_secondary_video_feed">Secondary</string>
    <string name="set_fpv_size">Resize</string>
    <string name="sdk_version">Version: %1$s</string>
    <string name="wsbridge_ip">WSBridge IP</string>
    <string name="provider_google_maps">Google Maps</string>
    <string name="provider_here_maps">Here Maps</string>
    <string name="provider_amaps">AMaps</string>
    <string name="home_direction">Home Direction</string>
    <string name="auto_frame">Auto Frame</string>
    <string name="unlock_flyzones">Unlock Fly Zones</string>
    <string name="show_flight_path">Show Flight Path</string>
    <string name="show_home_point">Show Home Point</string>
    <string name="show_gimbal_yaw">Show Gimbal Yaw</string>
    <string name="clear_flight_path">Clear Flight Path</string>
    <string name="replace_icon">Replace Icon</string>
    <string name="fly_zone">Fly Zone</string>
    <string name="fly_zone_legend">Fly Zone Legend</string>
    <string name="dji_account_indicator">DJI Account Login Indicator</string>
    <string name="new_color">New Color</string>
    <string name="sync">Sync</string>
    <string name="camera_name_primary">Primary Camera Name</string>
    <string name="camera_name_secondary">Secondary Camera Name</string>
    <string name="camera_side_primary">Primary Camera Side</string>
    <string name="camera_side_secondary">Secondary Camera Side</string>
    <string name="focus_point">Focus Point</string>
    <string name="metering_point">Metering Point</string>
    <string name="gimbal_control">Gimbal Control</string>
    <string name="display_grid">Display Grid</string>
    <string name="txt_grid_overlay_selection">Change Grid Overlay Type: </string>
    <string name="grid_type_none">None</string>
    <string name="grid_type_parallel">Parallel</string>
    <string name="grid_type_parallel_diagonal">Parallel with Diagonals</string>
    <string name="forgot_pwd"><u>Forgot Password?</u></string>
    <string name="email_hint">Email</string>
    <string name="pwd_hint">Password</string>
    <string name="login_txt">LOG IN</string>
    <string name="signup_txt">OR SIGN UP</string>
    <string name="confirm_pwd_hint">Confirm password</string>
    <string name="signup_str">SIGN UP</string>
    <string name="typetxt">Type Text</string>
    <string name="success_text">Success Text</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGV2ZWxvcGVyeHl6IiwiYSI6ImNqa2poMXV1cjFibzQza2p5c3YyZGl6cGMifQ.uMu2kiKV4918S7ITBjdXZQ</string>
    <string name="title_txt">DRONE TAKEOFF CHECKLIST</string>
    <string name="cancel_txt">Cancel</string>
    <string name="resolve_txt">START MISSSION TO TAKEOFF</string>
    <string name="drone_connect">Connected to drone</string>
    <string name="camera_connected">Camera is ready</string>
    <string name="drone_storage"><u>Drone storage status unknown</u></string>
    <string name="drone_gps"><u>Drone GPS satillites(0 found)</u></string>
    <string name="home_point"><u>Homepoint not set</u></string>
    <string name="mission_upload">Mission uploading to drone</string>
    <string name="drone_not_connected">Not connected to drone</string>
    <string name="camera_not_connected">Camera is not ready</string>
    <string name="mission_not_upload">Mission not uploaded to drone</string>
    <string name="drone_gps_no">Drone GPS satillites not found</string>
    <string name="ok_button">OK</string>
    <string name="mission_success">Mission completed successfullly!</string>
    <string name="char_m">m</string>
    <string name="gsd_txt">GSD</string>
    <string name="cmpx_txt">cm/px</string>
    <string name="ex_txt">1.1</string>
    <string name="speed_txt">speed:</string>
    <string name="angle_txt">angle:\n45</string>
    <string name="overlap_txt">overlap:</string>
    <string name="face_txt">face:</string>
    <string name="druber_txt">Druber</string>
    <string name="connect_txt">Connect</string>
    <string name="speed_update_txt">N/A m/s</string>
    <string name="altidue_txt">Altitude:</string>
    <string name="altitude_update_txt">N/A m</string>
    <string name="away_txt">N/A m away</string>
    <string name="grid_type_hint">grid</string>
    <string name="center_txt">center</string>
    <string name="slow_txt">slow</string>
    <string name="fast_txt">fast</string>
    <string name="alt_str">Alt</string>
    <string name="forward_txt">forward</string>
    <string name="horizontal_txt">horizontal</string>
    <string name="vertical_txt">vertical</string>
    <string name="low_txt">low</string>
    <string name="high_txt">high</string>
    <string name="switch_position">Switch is not in  \"P\" position</string>
    <string name="calibrated">Drone is not calibrated</string>
</resources>