<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:divider="@drawable/empty_height_divider"
    android:orientation="vertical"
    android:padding="10dp"
    android:showDividers="middle"
    android:weightSum="6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/speed_txt"
            android:textSize="12sp"
            android:id="@+id/speed_txt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:drawableTop="@drawable/drone"
            android:gravity="center"
            android:id="@+id/sp_drone"
            android:text="@string/slow_txt"
            android:textSize="12sp" />

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:id="@+id/speed_skbar"
            android:thumbTint="@color/seekbar_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:drawableTop="@drawable/drone"
            android:gravity="center"
            android:text="@string/fast_txt"
            android:id="@+id/sp_drones"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/angle_layout">

        <TextView
            android:id="@+id/angle_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/angle_txt"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:drawableTop="@drawable/ic_videocam_black_24dp"
            android:gravity="center"
            android:text="@string/horizontal_txt"
            android:textSize="12sp" />

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:id="@+id/angle_seekbar"
            android:thumbTint="@color/seekbar_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:drawableTop="@drawable/ic_videocam_vertical"
            android:gravity="center"
            android:text="@string/vertical_txt" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        android:visibility="gone">

        <TextView
            android:id="@+id/overlap_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/overlap_txt"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:drawableTop="@drawable/ic_low_black_24dp"
            android:gravity="center"
            android:text="@string/low_txt"
            android:textSize="12sp" />

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:thumbTint="@color/seekbar_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:drawableTop="@drawable/ic_high_black_24dp"
            android:gravity="center"
            android:text="@string/high_txt"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>