<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@android:color/white"
    tools:context="com.xyz.druber.flight.LoginActivity">

   <RelativeLayout
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:layout_gravity="center"
       android:layout_marginTop="100dp"
       android:background="@android:color/white">

       <include
           android:id="@+id/inc_imglay"
           layout="@layout/layout_applogo"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>

   </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight=".3"
        android:layout_marginTop="40dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:gravity="center"
            android:hint="@string/email_hint"
            android:textColorHint="@color/xyz_blue_color"
            android:backgroundTint="@color/xyz_blue_color"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/xyz_blue_color" />

        <EditText
            android:id="@+id/pwd_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColorHint="@color/xyz_blue_color"
            android:backgroundTint="@color/xyz_blue_color"
            android:textColor="@color/xyz_blue_color" />

        <com.romainpiel.shimmer.ShimmerTextView
            android:id="@+id/login_txt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="@string/login_txt"
            android:background="@color/xyz_darkblue_color"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgot_pwd_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/forgot_pwd"
            android:background="@android:color/white"
            android:textColor="@color/xyz_darkblue_color"
            android:textSize="14sp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="@android:color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/signup_txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round_shape_blue_corners"
            android:gravity="end"
            android:layout_weight="1"
            android:padding="15dp"
            android:enabled="false"
            android:text="@string/signup_txt"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>